--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Replace G-XXXXXXX with your GA4 Measurement ID -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"
+      src="https://www.googletagmanager.com/gtag/js?id=G-Z0K600Z2XT"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -18,7 +18,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-XXXXXXX", { debug_mode: true });
+      gtag("config", "G-Z0K600Z2XT", { debug_mode: true });
     </script>
   </head>
   <body>
