--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXX"
+      src="https://www.googletagmanager.com/gtag/js?id=G-Z0K600Z2XT"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -16,7 +16,7 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "G-XXXXXXX", { debug_mode: true });
+      gtag("config", "G-Z0K600Z2XT", { debug_mode: true });
     </script>
   </head>
   <body>
